<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ProjectCodeName</string>
    <string name="notification_channel_name">Notifications</string>
    <string name="title_debug">Debug menu</string>
    <string name="title_log_out">Log out</string>
    <string name="error_generic">Something went wrong. Please try again.</string>
    <string name="error_no_network">Connection error. Please try again.</string>

    <!-- Demo screen values. These can be removed -->
    <string name="demo_title_error">Error</string>
    <string name="demo_text_loading">Loading</string>
    <string name="demo_title_email">Email</string>
    <string name="demo_title_password">Password</string>
    <string name="demo_title_login">Login</string>
    <string name="demo_text_required">Required</string>
    <string name="demo_text_experience_prototype">Experience the prototype</string>
    <string name="demo_text_experience_prototype_description">Tap on the link below to experience the flow of the already created designs.</string>
    <string name="demo_title_open_prototype">Open the prototype</string>
    <string name="demo_title_prototype">Prototype</string>
    <string name="menu_more_options">More options</string>
</resources>
